[gd_scene load_steps=2 format=3 uid="uid://dbhema4vhnlcq"]

[ext_resource type="Script" path="res://scenes/gui/input_app.gd" id="1"]

[node name="InputApp" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -275.0
offset_top = -223.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.556863)
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -275.0
offset_top = -150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -275.0
offset_top = -150.0

[node name="ThrottleInput" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 50.0

[node name="BrakeInput" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 50.0

[node name="ClutchInput" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 50.0

[node name="SteeringInput" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SteeringInputLeft" type="ProgressBar" parent="Panel/VBoxContainer/SteeringInput"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
fill_mode = 1
show_percentage = false

[node name="SteeringInputRight" type="ProgressBar" parent="Panel/VBoxContainer/SteeringInput"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false
